log
Tue 23 Apr 2024 06:41:47 PM UTC: 
 tests:  0|6
total_score: 0/70
553308e
Tue 23 Apr 2024 07:38:41 PM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|6
total_score: 0/70
d222cbc
Tue 23 Apr 2024 07:39:45 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
hashmap.c:57:1: error: expected identifier or ‘(’ before ‘}’ token
   57 | }
      | ^
Compilation failed
eb3a67c
Tue 23 Apr 2024 07:39:57 PM UTC: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|6
total_score: 0/70
852d496
Tue 23 Apr 2024 07:42:03 PM UTC: 
 hashmap.c | 9 ---------
 1 file changed, 9 deletions(-)
 tests:  0|6
total_score: 0/70
96852bb
Tue 23 Apr 2024 07:42:33 PM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
67e331d
Tue 23 Apr 2024 07:45:55 PM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  5|4
total_score: 30/70
03e9d48
Thu 25 Apr 2024 06:40:37 PM UTC: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  0|0
111bbac
Thu 25 Apr 2024 06:41:47 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
test.c: In function ‘enlarge’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6575839
Thu 25 Apr 2024 06:43:06 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
0d0ac8f
